--- a/servers/nextjs/package.json
+++ b/servers/nextjs/package.json
@@ -70,14 +70,14 @@
     "@types/node": "^20",
     "@types/prismjs": "^1.26.5",
     "@types/puppeteer": "^5.4.7",
-    "@types/react": "^18",
+    "@types/react": "18.3.26",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.13",
     "cypress": "^14.3.3",
     "esbuild": "0.25.8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   },
   "overrides": {
     "brace-expansion": "2.0.2"
