Add .env.example file for FastAPI server configuration
- Introduced a sample environment configuration file for the FastAPI server.
- Included settings for backend URL, authentication, API documentation access, application data directory, and database directory.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ container.db
 .next-build
 .cursor
 unused
+AUTHENTICATION.md
+nginx-local.conf
+PRODUCTION_READINESS.md
+servers/nextjs/.env.local
