fix: enable authentication in .env.example for testing purposes

--- a/servers/fastapi/.env.example
+++ b/servers/fastapi/.env.example
@@ -3,7 +3,7 @@ COMPOSEAI_BACKEND_URL=http://localhost:8000
 
 # Authentication
 # Set to 'false' to disable authentication (for testing only)
-ENABLE_COMPOSEAI_AUTH=
+ENABLE_COMPOSEAI_AUTH=true
 
 # API Documentation Access
 # Set to 'true' to make /docs and /openapi.json publicly accessible
