--- a/nginx.conf
+++ b/nginx.conf
@@ -12,9 +12,14 @@ http {
   default_type application/octet-stream; # Required for SVG mime type
   client_max_body_size 100M;
 
+  # Trust Coolify proxy network
+  set_real_ip_from 172.18.0.0/16;
+  real_ip_header X-Forwarded-For;
+  real_ip_recursive on;
+
   server {
-    listen 80;
-    server_name localhost;
+    listen 8080;
+    server_name _;
 
     location / {
       proxy_pass http://localhost:3000;
@@ -22,12 +27,19 @@ http {
       proxy_set_header Upgrade $http_upgrade; # WebSocket header
       proxy_set_header Connection "upgrade"; # WebSocket header
       proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
       proxy_read_timeout 30m;
       proxy_connect_timeout 30m;
     }
 
     location /api/v1/ {
       proxy_pass http://localhost:8000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
       proxy_read_timeout 30m;
       proxy_connect_timeout 30m;
     }
@@ -35,33 +47,40 @@ http {
     # MCP
     location /mcp/ {
       proxy_pass http://localhost:8001/mcp/;
-      proxy_read_timeout 30m;
-      proxy_connect_timeout 30m;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_read_timeout 30m;
+      proxy_connect_timeout 30m;
     }
 
     location /mcp {
       proxy_pass http://localhost:8001/mcp;
-      proxy_read_timeout 30m;
-      proxy_connect_timeout 30m;
       proxy_set_header Host $host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_read_timeout 30m;
+      proxy_connect_timeout 30m;
     }
-
 
     location /docs {
       proxy_pass http://localhost:8000/docs;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
       proxy_read_timeout 30m;
       proxy_connect_timeout 30m;
     }
 
     location /openapi.json {
       proxy_pass http://localhost:8000/openapi.json;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
       proxy_read_timeout 30m;
       proxy_connect_timeout 30m;
     }
